# duckle

./: .all-contributorsrc  .gitignore  Cargo.toml  Dockerfile.web  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: app_settings.rs  engine_manager.rs  lib.rs  llama_chat.rs  main.rs  secrets.rs  self_update.rs  update_check.rs  (+1 more)
crates/duckdb-engine/: Cargo.toml  build.rs
crates/duckdb-engine/src/: connectors.rs  context.rs  history.rs  lib.rs  plan.rs  qvd.rs  review.rs  util.rs
crates/duckdb-engine/src/plan/: builders.rs  mod.rs  specs.rs  tests.rs
crates/duckdb-engine/tests/: execution.rs
crates/duckle-mcp/: catalog.json
crates/duckle-runner/: Cargo.toml
docs/: roadmap.md
docs/00_foundation/: 02_local-studio-quickstart.md  04_dev-run-modes.md
docs/02_workflows/: 04_database-ingestion-patterns.md  07_dolt-parquet-workflows.md
docs/03_runtime/: 00_runtime-overview.md  09_http-runtime-bridge.md
frontend/: package-lock.json  package.json
frontend/scripts/: gen-brand-icons.mjs
frontend/src/: App.tsx  GuidedTour.tsx  ShareView.tsx  UpdateBanner.tsx  main.tsx  pipeline-types.ts  run-resolve.ts  schema-resolve.ts  styles.css  tauri-bridge.ts  validation.ts  workspace.ts
marketing/promo/: build.sh
scripts/: render_icon.py
website/: index.html  use-cases.html
website/docs/: ai-duckie.html  automation.html  components.html  getting-started.html  index.html  integrations.html  learn.html
(+48 files in other folders)
